--- a/views/exhibition_artworks.hbs
+++ b/views/exhibition_artworks.hbs
@@ -24,7 +24,7 @@
         <div class="col">
           <div class="card h-100">
             <a href="/artworks/{{this.id}}">
-              <img src="{{this.url}}https://loremflickr.com/320/200/artwork" class="card-img-top" alt="{{this.name}}">
+              <img src="{{this.image}}" class="card-img-top" alt="{{this.name}}">
             </a>     
             <span style="position: relative; top: -10%; right: 5%" align="right">
               <a href="#" style="color:peru" class="mx-2"><i class="fa-solid fa-circle-plus"></i></a>  
