--- a/views/exhibition_artworks.hbs
+++ b/views/exhibition_artworks.hbs
@@ -1,5 +1,8 @@
+<div class="banner mb-5">
+  <h2 class="exhibition-name">{{exhibition.name}}</h2>
+</div>
+
 <div class="container-fluid">
-  <h4 class="mb-5">{{exhibition.name}}</h4>
 
   {{!-- nav tabs --}}
   <ul class="nav nav-tabs mb-5">
