--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,7 +11,7 @@
   <body>
     {{!-- Navbar --}}
     <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
-      <div class="container container-fluid">
+      <div class="container-fluid mx-5">
         <a class="navbar-brand col-6" href="#"><i class="fa-solid fa-palette"></i>  ART GALLERY  </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,8 +52,7 @@
         </div>
       </div>
     </nav>
-    <br>
-    <br>
+
     {{{body}}}
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
