--- a/views/artworks.hbs
+++ b/views/artworks.hbs
@@ -134,6 +134,26 @@
             </div>
           </div>
 
+          <div class="card card-body"
+            style="min-width: 15rem; border-style: solid; border-width: 1px; border-color:rgba(0,0,0,0.125)">
+            <label for="createYear_lower" class="form-label">創作年份<small class="ms-2 text-muted">e.g.
+                1980</small></label>
+            <div class="input-group input-group-sm mb-3">
+              <input name="createYear_lower" id="createYear_lower" type="number" min="1" max="2100" class="form-control"
+                aria-label="Height lower input" aria-describedby="createYear_lower" placeholder="下限"
+                value="{{searching.createYear_lower}}">
+              <span class="input-group-text" id="createYear_upper"> - </span>
+              <input name="createYear_upper" type="number" min="1" max="2100" class="form-control"
+                aria-label="Height upper input" aria-describedby="createYear_upper" placeholder="上限"
+                value="{{searching.createYear_upper}}">
+            </div>
+            <div class="form-check form-switch ms-auto">
+              <input name="createYear_includeNone" class="form-check-input" type="checkbox" role="switch"
+                id="createYear_includeNone" {{#unless searching.createYear_includeNone}}checked{{/unless}}>
+              <label class="form-check-label" for="createYear_includeNone">包含無年份的作品</label>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
@@ -143,6 +163,9 @@
       <div class="row">
         <div class="col-12 ms-auto mb-3">
           <button type="submit" class="btn btn-success btn-sm">Submit</button>
+        </div>
+        <div class="col-12 ms-auto mb-3">
+          <input type="reset" class="btn btn-secondary btn-sm" value="Reset">
         </div>
       </div>
     </div>
