--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,7 +10,7 @@
   </head>
   <body>
     {{!-- Navbar --}}
-    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light trans">
       <div class="container-fluid mx-5">
         <a class="navbar-brand col-6" href="#"><i class="fa-solid fa-palette"></i>  ART GALLERY  </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -59,5 +59,24 @@
       integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    
+    <script>
+      let navbar = document.querySelector('nav')
+      let lastScrollY = 0
+      window.addEventListener('scroll', function() {
+        let st = this.scrollY
+        if (st > lastScrollY) {  // 向下滑動
+          navbar.classList.add('d-none')
+        } else {
+          navbar.classList.remove('d-none', 'trans')
+          navbar.classList.add('bg-light')
+        }
+        if (st === 0) {  // 回到起始位置
+          navbar.classList.remove('bg-light')
+          navbar.classList.add('trans')
+        }
+        lastScrollY = st
+      })
+    </script>
   </body>
 </html>
