feat: modify limits of numbers of exhibition images uploaded

--- a/views/admin/exhibition.hbs
+++ b/views/admin/exhibition.hbs
@@ -38,8 +38,9 @@
       <div class="row justify-content-end">
         <form action="/admin/exhibitions/{{exhibition.id}}/images?_method=PUT" id="imageForm"
           class="col-9 col-sm-6 col-lg-4 d-inline-block needs-validation" method="post" enctype="multipart/form-data" novalidate>
-          <input class="form-control form-control-sm" type="file" name="exhImage" style="max-width: 400px;" required>
-          <div class="invalid-feedback">請上傳檔案</div>
+          <label class="form-label" for="exhImage">請上傳檔案，一次最多10張</label>
+          <input class="form-control form-control-sm" type="file" name="exhImage" id="exhImage" style="max-width: 400px;" multiple required>
+          <div class="invalid-feedback">請至少上傳一個檔案，勿超過10張</div>
           <select class="form-select form-select-sm" name="type" aria-label=".form-select-sm" style="max-width: 400px;">
             <option value="poster">Poster</option>
             <option value="space">Space</option>
@@ -51,7 +52,7 @@
             style="max-width: 400px;" maxlength="200"></textarea>
         </form>
         <div class="col-3 col-sm-2 col-lg-1 align-self-end">
-          <button type="submit" form="imageForm" class="btn btn-outline-success btn-sm">送出</button>
+          <button type="submit" form="imageForm" class="btn btn-outline-success btn-sm" id="imageBtn">送出</button>
         </div>
       </div>
     </div>
@@ -107,6 +108,20 @@
   const imageDiv = document.getElementById('imageDiv')
   uploadBtn.addEventListener('click', () => {
     imageDiv.classList.toggle('d-none')
+  })
+
+  // check images input validity
+  const exhImage = document.getElementById('exhImage')
+  function checkFilesNum() {
+    if (exhImage.files.length > 10) {
+      exhImage.setCustomValidity('超過數量限制')
+      event.preventDefault()
+      return;
+    }
+    exhImage.setCustomValidity('')
+  }
+  exhImage.addEventListener('change', (event) => {
+    checkFilesNum()
   })
 
 
