--- a/views/admin/exhibition_artworks.hbs
+++ b/views/admin/exhibition_artworks.hbs
@@ -4,7 +4,7 @@
   <div class="card" id="exhibition_artworks" style="overflow-x: auto">
     <div class="card-header d-flex justify-content-between">
       <h5 class="mt-2">展出藝術品</h5>
-      <a href="/admin/exhibitions/{{exhibition.id}}/artworks/"><button class="btn btn-success">Add</button></a>
+      <a href="/admin/exhibitions/{{exhibition.id}}/select_artworks/"><button class="btn btn-success">Add</button></a>
     </div>
   
     <table class="table table-bordered table-hover" style="min-width: 100%;">
@@ -49,9 +49,9 @@
               </a>
               <form action="/admin/exhibitions/{{../exhibition.id}}/artworks?_method=DELETE" method="post">
                 <input type="text" class="d-none" name="artworkId" value="{{this.id}}">
-                <button type="submit" class="btn btn-outline-danger btn-sm ">Remove</button>
+                <button type="submit" class="btn btn-outline-danger btn-sm" >Remove</button>
+              </form>  
             </div>
-            </form>
           </td>
         </tr>
         {{/each}}
@@ -59,6 +59,38 @@
   
     </table>
   </div>
-
-
 </div>
+
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script>
+  let tbody = document.querySelector('tbody')
+  tbody.addEventListener('click', (event) => {
+    if (event.target.classList.contains('btn-outline-danger')) {
+      event.preventDefault()
+      let form = event.target.parentElement
+      let tr = form.parentElement.parentElement.parentElement
+      let artistName = tr.children[3].innerText
+      let name = tr.children[4].innerText
+
+      Swal.fire({
+        title: 'Are you sure?',
+        text: `確定要刪除 ${artistName}-${name}`,
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: '刪除！'
+      }).then((result) => {
+        if (result.isConfirmed) {
+          Swal.fire(
+            '已刪除',
+            `${artistName}-${name}`,
+            'success'
+          ).then(result => {
+            form.submit()
+          })
+        }
+      })
+    }
+  })
+</script>
