--- a/views/admin/exhibition_artworks.hbs
+++ b/views/admin/exhibition_artworks.hbs
@@ -1,12 +1,22 @@
 <div class="container-fluid mt-5">
-  <h4 class="mb-3">{{exhibition.name}}</h4>
+  <div class="d-flex justify-content-between">
+    <h4 class="mb-3">{{exhibition.name}}</h4>
+    <p>展覽資訊
+      <a class="ms-2" href="/admin/exhibitions/{{exhibition.id}}" role="button">
+        <i class="fa-solid fa-circle-info"></i>
+      </a>
+    </p>
+  </div>
 
   <div class="card" id="exhibition_artworks" style="overflow-x: auto">
-    <div class="card-header d-flex justify-content-between">
-      <h5 class="mt-2">展出藝術品</h5>
-      <a href="/admin/exhibitions/{{exhibition.id}}/select_artworks/"><button class="btn btn-success">Add</button></a>
+    <div class="card-header">
+      <div class="d-flex justify-content-between align-items-center">
+        <h5 class="mt-2">展出藝術品</h5>
+        <p class="text-muted mt-3">共{{exhibition.artwork_sum}}件作品</p>
+        <a href="/admin/exhibitions/{{exhibition.id}}/select_artworks/"><button class="btn btn-success">Add</button></a>
+      </div>
     </div>
-  
+
     <table class="table table-bordered table-hover" style="min-width: 100%;">
       <thead>
         <tr>
@@ -49,14 +59,14 @@
               </a>
               <form action="/admin/exhibitions/{{../exhibition.id}}/artworks?_method=DELETE" method="post">
                 <input type="text" class="d-none" name="artworkId" value="{{this.id}}">
-                <button type="submit" class="btn btn-outline-danger btn-sm" >Remove</button>
-              </form>  
+                <button type="submit" class="btn btn-outline-danger btn-sm">Remove</button>
+              </form>
             </div>
           </td>
         </tr>
         {{/each}}
       </tbody>
-  
+
     </table>
   </div>
 </div>
