--- a/views/exhibition_artworks.hbs
+++ b/views/exhibition_artworks.hbs
@@ -22,6 +22,9 @@
     <div class="col-md-8">
       <h4 class="mb-3"><i class="fa-solid fa-diamond fa-xs"></i> 參展作品</h4>
       <hr class="mb-4">
+      {{#unless exhibition.ContainedArtworks}}
+      <h5 class="mt-5" align="center">No artwork available.</h5>
+      {{/unless}}
       <div class="row row-cols-1 row-cols-md-3 g-4 mb-3">
         {{#each exhibition.ContainedArtworks}}
         <div class="col">
@@ -44,15 +47,18 @@
         {{/each}}
 
       </div>
+      {{#if exhibition.ContainedArtworks}}
       <p align="center">一共{{exhibition.artwork_sum}}件展品</p>
-      {{!-- <p class="mx-3 mb-5" align="right"><a href="exhibitions/{{exhibition.id}}/artworks"><i
-            class="fa-solid fa-angles-right"></i> More </a></p> --}}
+      {{/if}}
     </div>
 
     {{!-- artists --}}
     <div class="col-md-3 mx-auto">
       <h4 class="mb-3"><i class="fa-solid fa-diamond fa-xs"></i> 藝術家</h4>
       <hr class="mb-4">
+      {{#unless exhibition.Creators}}
+      <h5 class="mt-5" align="center">No artist available.</h5>
+      {{/unless}}
       {{#each exhibition.Creators}}
         <div class="card mb-3" >
           <div class="row g-0">
