feat: add flash message and error handler

--- a/views/exhibitions.hbs
+++ b/views/exhibitions.hbs
@@ -1,17 +1,4 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="dropdown mb-5" align="right">
-      <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown"
-        aria-expanded="false">
-        排序
-      </button>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-        <li><a class="dropdown-item active" type="button" aria-current="true" href="#">Latest-Last | Default</a></li>
-        <li><a class="dropdown-item" type="button" href="#">Last-Latest</a></li>
-        <li><a class="dropdown-item" type="button" href="#">Name</a></li>
-      </ul>
-    </div>
-  </div>
+<div class="container-fluid" style="margin-top: 120px">
 
   {{#unless exhibitionsData}}
   <h5 align="center">No exhibition available!</h5>
