--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -52,7 +52,9 @@
         </div>
       </div>
     </nav>
-
+    <div style="position: absolute; top: 80px; right: 150px">
+    {{> messages}}
+    </div>
     {{{body}}}
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
