feat: passport init, login, logout

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -45,7 +45,11 @@
               <a class="nav-link" href="#"><i class="fa-solid fa-circle-user"></i> </a>
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link" href="#"><i class="fa-solid fa-arrow-right-from-bracket"></i> </a>
+              <form action="/user/logout" method="post" id="logout">
+                <button class="btn" type="submit" form="logout">
+                  <i class="fa-solid fa-arrow-right-from-bracket"></i> 
+                </button>
+              </form>
             </li>
 
           </ul>
