--- a/views/admin/select_artworks.hbs
+++ b/views/admin/select_artworks.hbs
@@ -1,7 +1,12 @@
 <div class="container-fluid mt-5">
   <div class="d-flex justify-content-between">
+    {{#if exhibition}}
     <h4 class="mb-3">{{exhibition.name}}</h4>
     <button class="btn btn-warning mb-3" type="submit" form="select_works">Add selected works</button>
+    {{else}}
+    <h4 class="mb-3">Artworks Inventory</h4>
+    <button class="btn btn-warning mb-3"> <a href="/admin/artworks/create">Create new</a> </button>
+    {{/if}}
   </div>
   <table class="table table-bordered table-hover" style="min-width: 100%;">
     <thead>
@@ -54,18 +59,20 @@
       </tr>
     </thead>
     <tbody>
+      {{#if exhibition}}
       <form action="/admin/exhibitions/{{exhibition.id}}/artworks?_method=PUT" method="post" id="select_works">
+      {{/if}}
         {{#each artworks }}
-
-
         <tr>
           <th scope="row">
             <label class="form-check-label" for="work_{{this.id}}">
               {{this.id}}
             </label>
+            {{#if ../exhibition}}
             <div class="form-check">
               <input class="form-check-input" type="checkbox" name="{{this.id}}" id="work_{{this.id}}">
             </div>
+            {{/if}}
           </th>
           <td class="sn">{{this.serialNumber}}</td>
           <td class="artist">{{this.artistName}}</td>
